# MLOPS_Project2

./: .dockerignore  .gitignore  CLOUD_DEPLOYMENT.md  DOCKER_PLAYGROUND_GUIDE.md  Dockerfile  README.md  docker_playground_setup.sh  docker_run.ps1  docker_run_wandb.ps1  example_runs.ps1  model.py  pyproject.toml  requirements.txt  train.py  verify_performance.py
